--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <span id="version">version 0.1</span>
         </div><!-- container -->
         
+        <script src="stock.js" type="text/javascript" charset="utf-8"></script>
+        <script src="market.js" type="text/javascript" charset="utf-8"></script>
         <script src="controller.js" type="text/javascript" charset="utf-8"></script>
         
         <script type="text/javascript" charset="utf-8">
