investor and portfolio classes added but not complete. investor/market interaction in progress

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         </div><!-- container -->
         
         <script src="stock.js" type="text/javascript" charset="utf-8"></script>
+        <script src="portfolio.js" type="text/javascript" charset="utf-8"></script>
+        <script src="investor.js" type="text/javascript" charset="utf-8"></script>
         <script src="market.js" type="text/javascript" charset="utf-8"></script>
         <script src="controller.js" type="text/javascript" charset="utf-8"></script>
         
