--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="cache.manifest">
     <head>
         <title>DayTrader</title>
         <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" >
