progress on style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="apple-touch-icon" href="images/icon.png" />
+        <link rel="apple-touch-icon-precomposed" href="icon.png" />
 
         <link rel="stylesheet" href="main.css" type="text/css" media="screen" charset="utf-8" />
 
@@ -16,7 +16,7 @@
         <div id="container">
             
             <span id="credits"><a href="http://chrisfattarsi.com">chris fattarsi</a></span>
-            <span id="version">version 0.1.2</span>
+            <span id="version">version 0.1.3</span>
         </div><!-- container -->
         
         <script src="stock.js" type="text/javascript" charset="utf-8"></script>
